--- a/Wallnut.UI/App.config
+++ b/Wallnut.UI/App.config
@@ -5,8 +5,14 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="WallnutProductionContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
-    <add name="Wallnut.UI.Properties.Settings.WallnutProductionCSReporting" connectionString="Data Source=NOUT\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="WallnutProductionContext" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True;MultipleActiveResultSets=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Wallnut.UI.Properties.Settings.WallnutProductionCSReporting"
+      connectionString="Data Source=NOUT\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="Wallnut.UI.Properties.Settings.WallnutProductionConnectionString"
+      connectionString="Data Source=IVC_KSV\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <runtime>
