--- a/Wallnut.Domain/App.config
+++ b/Wallnut.Domain/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <connectionStrings>
-        <add name="WallnutProductionContext" connectionString="Data Source=IVC_KSV\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True;MultipleActiveResultSets=True"
+        <add name="WallnutProductionContext" connectionString="Data Source=NOUT\SQLEXPRESS;Initial Catalog=WallnutProduction;Integrated Security=True;MultipleActiveResultSets=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
