--- a/Wallnut.UI/Wallnut.UI.csproj
+++ b/Wallnut.UI/Wallnut.UI.csproj
@@ -692,8 +692,6 @@
     <EmbeddedResource Include="Reports\ViewForm.resx">
       <DependentUpon>ViewForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Reports\Report1.rdlc" />
-    <EmbeddedResource Include="Reports\Report2.rdlc" />
     <EmbeddedResource Include="Sales\CurrencyRate\fAddCurrencyRate.resx">
       <DependentUpon>fAddCurrencyRate.cs</DependentUpon>
     </EmbeddedResource>
@@ -754,6 +752,7 @@
     <None Include="Properties\DataSources\Wallnut.Domain.Models.Employee.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeAttendanceHistory.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeDepartmentHistory.datasource" />
+    <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeWithAttr.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.Expenditure.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.ExpenditureCostHistory.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.PersonPhone.datasource" />
