--- a/Wallnut.UI/Wallnut.UI.csproj
+++ b/Wallnut.UI/Wallnut.UI.csproj
@@ -344,6 +344,12 @@
     <Compile Include="Production\WorkOrder\fWorkOrder.Designer.cs">
       <DependentUpon>fWorkOrder.cs</DependentUpon>
     </Compile>
+    <Compile Include="Production\WorkOrder\fBackFromProduction.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Production\WorkOrder\fBackFromProduction.Designer.cs">
+      <DependentUpon>fBackFromProduction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Purchasing\ProductVendor\fAddProductVendor.cs">
@@ -657,6 +663,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Production\WorkOrder\fWorkOrder.resx">
       <DependentUpon>fWorkOrder.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Production\WorkOrder\fBackFromProduction.resx">
+      <DependentUpon>fBackFromProduction.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
