--- a/Wallnut.Utils/Wallnut.Utils.csproj
+++ b/Wallnut.Utils/Wallnut.Utils.csproj
@@ -49,6 +49,7 @@
     <Compile Include="PasswordHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Validation.cs" />
   </ItemGroup>
   <ItemGroup>
