--- a/Wallnut.Domain/Wallnut.Domain.csproj
+++ b/Wallnut.Domain/Wallnut.Domain.csproj
@@ -146,8 +146,11 @@
     <Compile Include="Models\Mapping\ProductListPriceHistoryMap.cs" />
     <Compile Include="Models\Mapping\ProductMap.cs" />
     <Compile Include="Models\Mapping\ProductVendorMap.cs" />
+    <Compile Include="Models\Mapping\PropertyMap.cs" />
+    <Compile Include="Models\Mapping\PropertyToEntityMap.cs" />
     <Compile Include="Models\Mapping\PurchaseOrderDetailMap.cs" />
     <Compile Include="Models\Mapping\PurchaseOrderHeaderMap.cs" />
+    <Compile Include="Models\Mapping\RoleMap.cs" />
     <Compile Include="Models\Mapping\SalesOrderDetailMap.cs" />
     <Compile Include="Models\Mapping\SalesOrderHeaderMap.cs" />
     <Compile Include="Models\Mapping\SalesPersonMap.cs" />
@@ -177,8 +180,11 @@
     <Compile Include="Models\ProductInventory.cs" />
     <Compile Include="Models\ProductListPriceHistory.cs" />
     <Compile Include="Models\ProductVendor.cs" />
+    <Compile Include="Models\Property.cs" />
+    <Compile Include="Models\PropertyToEntity.cs" />
     <Compile Include="Models\PurchaseOrderDetail.cs" />
     <Compile Include="Models\PurchaseOrderHeader.cs" />
+    <Compile Include="Models\Role.cs" />
     <Compile Include="Models\SalesOrderDetail.cs" />
     <Compile Include="Models\SalesOrderHeader.cs" />
     <Compile Include="Models\SalesPerson.cs" />
