--- a/Wallnut.UI/Wallnut.UI.csproj
+++ b/Wallnut.UI/Wallnut.UI.csproj
@@ -966,6 +966,7 @@
     <None Include="Properties\DataSources\Wallnut.Domain.Models.Employee.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeAttendanceHistory.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeDepartmentHistory.datasource" />
+    <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeePayHistory.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeRole.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.EmployeeWithAttr.datasource" />
     <None Include="Properties\DataSources\Wallnut.Domain.Models.ErrorLog.datasource" />
@@ -1066,7 +1067,12 @@
   <ItemGroup>
     <None Include="ico\157_GetPermission_48x48_72.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="ico\money_add.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ico\money_delete.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
