--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\Wallnut.BusinessLogic\packages.config" />
   <repository path="..\Wallnut.Domain\packages.config" />
   <repository path="..\Wallnut.UI\packages.config" />
+  <repository path="..\Wallnut.Utils\packages.config" />
 </repositories>
