--- a/Wallnut.BusinessLogic/Wallnut.BusinessLogic.csproj
+++ b/Wallnut.BusinessLogic/Wallnut.BusinessLogic.csproj
@@ -151,6 +151,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="CodeTemplates\DbHelper.ttinclude" />
+    <None Include="CodeTemplates\Manager.ttinclude" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
